--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-contaienr">
+    <div class="container header-container">
         <div class="row">
             <div class="col"></div>
         </div>
@@ -15,10 +15,11 @@
         <div class="row">
             <div class="col">
                 <hr>
-                    <h2 class="logo-font mb-4">Shopping Bag</h2>
+                <h2 class="logo-font mb-4">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
+
         <div class="row">
             <div class="col">
                 {% if bag_items %}
